# assistantBeta

./: pyproject.toml
assistantbeta/: main.py  models.py
