[tool.poetry]
name = "assistantbeta"
version = "0.1.0"
description = ""
authors = ["RyanLisse <57917217+RyanLisse@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
openai = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
